--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -12,6 +12,7 @@
         <textarea name="intro" id="intro" class="form-control" placeholder="Введите анонс">{{ article.intro }}</textarea><br>
         <textarea name="text" id="text" class="form-control" placeholder="Введите основной текст">{{ article.text }}</textarea><br>
         <input type="submit" class="btn btn-success" value="Обновить">
+        <a href="/posts" class="btn btn-danger">Выйти</a>
     </form>
     </div>
 {% endblock %}
